--- a/app/src/main/res/layout/activity_restaurant_add_seat.xml
+++ b/app/src/main/res/layout/activity_restaurant_add_seat.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f5e131"
-    tools:context=".RestaurantHolidayInfoChange">
-
+    tools:context=".RestaurantAddSeat">
 
     <TextView
         android:id="@+id/textTitle"
@@ -15,17 +14,17 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:text="休日情報変更"
+        android:text="座席の追加"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <LinearLayout
         android:layout_width="322dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="50dp"
         android:orientation="vertical"
+        android:layout_gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="23dp"
             android:layout_marginTop="50dp"
-            android:text="アカウント情報が取得できませんでした"
+            android:text="座席情報が取得できませんでした"
             android:textColor="#ff0000"
             android:visibility="invisible" />
 
@@ -44,10 +43,40 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:layout_marginTop="20dp"
-            android:text="年月日" />
+            android:text="座席名" />
+
+        <EditText
+            android:id="@+id/textBoxSeatName"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="#efefef"
+            android:backgroundTint="#efefef"
+            android:paddingTop="3dp"
+            android:textSize="15dp" />
 
         <TextView
-            android:id="@+id/textBoxRestaurantDay"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
+            android:text="着席可能人数" />
+
+        <EditText
+            android:id="@+id/textBoxCapacity"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="#efefef"
+            android:backgroundTint="#efefef"
+            android:paddingTop="3dp"
+            android:textSize="15dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
+            android:text="座席の特徴" />
+
+        <EditText
+            android:id="@+id/textBoxSeatFeature"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:background="#efefef"
@@ -56,24 +85,16 @@
             android:textSize="15dp" />
 
         <Button
-            android:id="@+id/buttonAccountAddHoliday"
+            android:id="@+id/buttonAddSeat"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
             android:backgroundTint="#efefef"
-            android:text="休日情報追加"
+            android:text="追加"
             android:textColor="#555555" />
 
-        <Button
-            android:id="@+id/buttonAccountDeleteHoliday"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:backgroundTint="#efefef"
-            android:text="休日情報削除"
-            android:textColor="#555555" />
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
