--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -50,6 +50,18 @@
             android:padding="0dp"
             android:text="座席"
             android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/buttonReservation"
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_weight="1"
+            android:backgroundTint="#eb4242"
+            android:padding="0dp"
+            android:text="予約"
+            android:textSize="15sp" />
     </LinearLayout>
 
     <TextView
@@ -88,19 +100,11 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/buttonAddSeat"
-            android:layout_width="300dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="200dp"
-            android:layout_height="60dp"
-            android:backgroundTint="#eb4242"
-            android:text="座席追加" />
-
-        <Button
             android:id="@+id/buttonCalender"
             android:layout_width="300dp"
             android:layout_gravity="center"
             android:layout_height="60dp"
+            android:layout_marginTop="200dp"
             android:backgroundTint="#eb4242"
             android:text="カレンダー" />
 
