--- a/app/src/main/res/layout/activity_restaurant_seat_list.xml
+++ b/app/src/main/res/layout/activity_restaurant_seat_list.xml
@@ -11,38 +11,79 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:weightSum="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ListView
-            android:id="@+id/listView"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_height="0dp"
+            android:layout_weight="0.15">
 
-        </ListView>
+            <TextView
+                android:id="@+id/textTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:text="座席一覧"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/buttonAddSeat"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:backgroundTint="#efefef"
-            android:text="座席追加"
-            android:textColor="#555555" />
-
-        <TextView
-            android:id="@+id/errorDisplay"
+        <ScrollView
+            android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="23dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="100dp"
-            android:text="座席情報が取得できませんでした"
-            android:textColor="#ff0000"
-            android:visibility="invisible" />
+            android:layout_height="0dp"
+            android:layout_weight="0.85">
+
+            <LinearLayout
+                android:layout_width="322dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ListView
+                    android:id="@+id/listView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </ListView>
+
+                <Button
+                    android:id="@+id/buttonAddSeat"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="50dp"
+                    android:backgroundTint="#efefef"
+                    android:text="座席追加"
+                    android:textColor="#555555" />
+
+                <TextView
+                    android:id="@+id/errorDisplay"
+                    android:layout_width="match_parent"
+                    android:layout_height="23dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="100dp"
+                    android:text="座席情報が取得できませんでした"
+                    android:textColor="#ff0000"
+                    android:visibility="invisible" />
+
+            </LinearLayout>
+
+        </ScrollView>
 
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
