--- a/app/src/main/res/layout/activity_restaurant_calendar.xml
+++ b/app/src/main/res/layout/activity_restaurant_calendar.xml
@@ -64,6 +64,15 @@
             android:backgroundTint="#efefef"
             android:text="休日削除"
             android:textColor="#555555" />
+        <Button
+            android:id="@+id/buttonAccountHolidayList"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#efefef"
+            android:text="休日一覧"
+            android:textColor="#555555" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
