--- a/app/src/main/res/layout/activity_restaurant_account_info_show.xml
+++ b/app/src/main/res/layout/activity_restaurant_account_info_show.xml
@@ -51,6 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:background="#efefef"
+            android:textColor="@color/black"
             android:backgroundTint="#efefef"
             android:paddingTop="3dp"
             android:textSize="15dp" />
@@ -67,6 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:background="#efefef"
+            android:textColor="@color/black"
             android:backgroundTint="#efefef"
             android:paddingTop="3dp"
             android:textSize="15dp" />
@@ -82,6 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:background="#efefef"
+            android:textColor="@color/black"
             android:backgroundTint="#efefef"
             android:paddingTop="3dp"
             android:textSize="15dp" />
@@ -97,6 +100,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:background="#efefef"
+            android:textColor="@color/black"
             android:backgroundTint="#efefef"
             android:paddingTop="3dp"
             android:textSize="15dp" />
@@ -112,6 +116,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:background="#efefef"
+            android:textColor="@color/black"
             android:backgroundTint="#efefef"
             android:paddingTop="3dp"
             android:textSize="15dp" />
@@ -127,6 +132,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:background="#efefef"
+            android:textColor="@color/black"
             android:backgroundTint="#efefef"
             android:paddingTop="3dp"
             android:textSize="15dp" />
