--- a/app/src/main/res/layout/activity_restaurant_add_seat.xml
+++ b/app/src/main/res/layout/activity_restaurant_add_seat.xml
@@ -50,6 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:background="#efefef"
+            android:textColor="@color/black"
             android:backgroundTint="#efefef"
             android:paddingTop="3dp"
             android:textSize="15dp" />
@@ -65,6 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:background="#efefef"
+            android:textColor="@color/black"
             android:backgroundTint="#efefef"
             android:paddingTop="3dp"
             android:textSize="15dp" />
@@ -81,6 +83,7 @@
             android:layout_height="30dp"
             android:background="#efefef"
             android:backgroundTint="#efefef"
+            android:textColor="@color/black"
             android:paddingTop="3dp"
             android:textSize="15dp" />
 
