--- a/app/src/main/res/layout/activity_restaurant_seat_show.xml
+++ b/app/src/main/res/layout/activity_restaurant_seat_show.xml
@@ -72,6 +72,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:background="#efefef"
+                    android:textColor="@color/black"
                     android:backgroundTint="#efefef"
                     android:paddingTop="3dp"
                     android:textSize="15dp" />
@@ -87,6 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:background="#efefef"
+                    android:textColor="@color/black"
                     android:backgroundTint="#efefef"
                     android:paddingTop="3dp"
                     android:textSize="15dp" />
@@ -102,6 +104,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:background="#efefef"
+                    android:textColor="@color/black"
                     android:backgroundTint="#efefef"
                     android:paddingTop="3dp"
                     android:textSize="15dp" />
@@ -116,6 +119,7 @@
                     android:id="@+id/textBoxIsFilled"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
+                    android:textColor="@color/black"
                     android:background="#efefef"
                     android:backgroundTint="#efefef"
                     android:paddingTop="3dp"
@@ -132,6 +136,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:background="#efefef"
+                    android:textColor="@color/black"
                     android:backgroundTint="#efefef"
                     android:paddingTop="3dp"
                     android:textSize="15dp" />
