--- a/app/src/main/res/layout/activity_restaurant_seat_show.xml
+++ b/app/src/main/res/layout/activity_restaurant_seat_show.xml
@@ -119,7 +119,7 @@
                     android:id="@+id/textBoxIsFilled"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:textColor="@color/black"
+                    android:textColor="#FF0000"
                     android:background="#efefef"
                     android:backgroundTint="#efefef"
                     android:paddingTop="3dp"
